--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.24.6",
+    "@trpc/client": "^10.11.0",
+    "@trpc/next": "^10.11.0",
+    "@trpc/react-query": "^10.11.0",
+    "@trpc/server": "^10.11.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.2",
     "zod": "^3.20.2"
   },
   "devDependencies": {
