--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.12.2",
