--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.10",
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -21,6 +22,7 @@
     "@trpc/server": "^10.11.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "heroicons": "^2.0.16",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "nodemailer": "^6.9.1",
