--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,31 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL=
 
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
+# https://next-auth.js.org/configuration/options#secret/
 # NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth Email Provider
+EMAIL_SERVER_USER=apikey
+EMAIL_SERVER_PASSWORD=
+EMAIL_SERVER_HOST=smtp.sendgrid.net
+EMAIL_SERVER_PORT=587
+EMAIL_FROM=mvnetwork.help@gmail.com
+
+# Next Auth Facebook Provider
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+# Next Auth Google Provider
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Next Auth Linkedin Provider
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
