--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "eslint": "^8.35.0",
     "eslint-config-next": "13.2.3",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
