--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@screens/*": ["src/components/screens/*"],
-      "@ui/*": ["src/components/new-ui/*"],
+      "@ui/*": ["src/components/ui/*"],
       "@lib/*": ["src/lib"]
     }
   },
