--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsconfigPaths": true,
     "incremental": true,
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
