--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "heroicons": "^2.0.16",
+    "jotai": "^2.0.3",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
