--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.0",
     "superjson": "^1.12.2",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
