--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,10 @@ GOOGLE_CLIENT_SECRET=
 # Next Auth Linkedin Provider
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
+
+# Algolia
+NEXT_PUBLIC_ALGOLIA_API_ID=
+NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_KEY=
+ALGOLIA_ADMIN_KEY=
+NEXT_PUBLIC_ALGOLIA_INDEX_NAME=
+NEXT_PUBLIC_ALGOLIA_QUERY_SUGGESTIONS=
