--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@trpc/next": "^10.14.1",
     "@trpc/react-query": "^10.14.1",
     "@trpc/server": "^10.14.1",
+    "algoliasearch": "^4.19.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -66,6 +67,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-instantsearch-hooks-web": "^6.47.3",
     "react-select": "^5.7.0",
     "superjson": "^1.12.2",
     "tailwind-merge": "^1.14.0",
