--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "heroicons": "^2.0.16",
+    "instantsearch.js": "^4.56.8",
     "jotai": "^2.0.3",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
