--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "heroicons": "^2.0.16",
-    "instantsearch.js": "^4.56.8",
+    "instantsearch.js": "^4.56.9",
     "jotai": "^2.0.3",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
@@ -68,7 +68,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
-    "react-instantsearch-hooks-web": "^6.47.3",
+    "react-instantsearch": "^7.0.1",
+    "react-instantsearch-router-nextjs": "^7.0.1",
     "react-select": "^5.7.0",
     "superjson": "^1.12.2",
     "tailwind-merge": "^1.14.0",
