--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "heroicons": "^2.0.16",
     "instantsearch.js": "^4.56.9",
     "jotai": "^2.0.3",
+    "linkify-react": "^4.1.1",
+    "linkifyjs": "^4.1.1",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
